# Logger

./: CMakeLists.txt  CMakeSettings.json  Logger.cmake  README.md  utility.cmake
Examples/: ExampleMaster.cmake
Examples/ConsoleLogger/: CMakeLists.txt
Examples/ConsoleLogger/src/: main.cpp
Examples/Example_multipleLoggers/src/: main.cpp
Examples/Example_simple/src/: main.cpp
Examples/LogViewer/src/: main.cpp
Examples/LoggerSandbox/: CMakeLists.txt  ContextObject.ui
Examples/LoggerSandbox/inc/: Context1Object.h  Context2Object.h  ContextObject.h
Examples/LoggerSandbox/src/: Context1Object.cpp  Context2Object.cpp  ContextObject.cpp  main.cpp
Examples/PerformanceTest/src/: main.cpp
Examples/Sandbox/src/: main.cpp
core/: CMakeLists.txt
core/inc/: AbstractLogger.h  AbstractReceiver.h  ConsoleLogger.h  ContextLogger.h  DateTime.h  FilePlotter.h  LibraryInfo.h  LogColor.h  LogLevel.h  LogManager.h  LogMessage.h  LogObject.h  LogProfiler.h  Logger.h  LoggerInterface.h  Logger_base.h  Logger_debug.h  Logger_global.h  Logger_info.h  Signal.h
core/inc/Filter/: LoggerIDFilter.h
core/inc/LoggerTypes/: AbstractLogger.h  ContextLogger.h
core/inc/QT/: QContextLoggerTree.h  QContextLoggerTreeView.h  QContextLoggerTreeWidgetItem.h
core/inc/ReceiverTypes/: AbstractReceiver.h  ConsoleContextPlotter.h  ConsolePlotter.h  ContextReceiver.h  QContextLoggerTree.h
core/inc/ReceiverTypes/ui/: QAbstractLogView.h  QContextLoggerTree.h
core/inc/Utilities/: DateTime.h  Export.h  Import.h  LogProfiler.h  MessageFilter.h  QLogMessageItemModel.h  QTreeItem.h  QTreeModel.h  Resources.h  Signal.h
core/inc/ui/: DateTimeWidget.h  NativeConsoleView.h  QAbstractContextLoggerView.h  QAbstractLogView.h  QConsoleView.h  QConsoleWidget.h  QContextLoggerTree.h  QContextLoggerTreeView.h  QTreeConsoleView.h  StaticObjs.h
core/inc/ui/Widgets/: DateTimeWidget.h  QAbstractLogWidget.h  QConsoleWidget.h  QContextLoggerTreeWidget.h
core/res/: icons.qrc
core/resources/: LoggerIcons.qrc
core/resources/styles/darkStyle/: LoggerDarkstyle.qrc  darkstyle.qrc  darkstyle.qss
core/src/: AbstractLogger.cpp  AbstractReceiver.cpp  ConsoleLogger.cpp  ContextLogger.cpp  DateTime.cpp  FilePlotter.cpp  LibraryInfo.cpp  LogColor.cpp  LogLevel.cpp  LogManager.cpp  LogMessage.cpp  LogObject.cpp  LogProfiler.cpp  Logger.cpp  Logger_debug.cpp  Logger_info.cpp
core/src/Filter/: LoggerIDFilter.cpp
core/src/LoggerTypes/: AbstractLogger.cpp  ContextLogger.cpp
core/src/QT/: QContextLoggerTree.cpp  QContextLoggerTreeView.cpp  QContextLoggerTreeWidgetItem.cpp
core/src/ReceiverTypes/: AbstractReceiver.cpp  ConsoleContextPlotter.cpp  ConsolePlotter.cpp  ContextReceiver.cpp  QContextLoggerTree.cpp
core/src/ReceiverTypes/ui/: QAbstractLogView.cpp  QContextLoggerTree.cpp
core/src/Utilities/: DateTime.cpp  Export.cpp  Import.cpp  LogProfiler.cpp  QLogMessageItemModel.cpp  QTreeItem.cpp  QTreeModel.cpp  Resources.cpp
core/src/ui/: DateTimeWidget.cpp  NativeConsoleView.cpp  QAbstractContextLoggerView.cpp  QAbstractLogView.cpp  QConsoleView.cpp  QConsoleWidget.cpp  QContextLoggerTree.cpp  QContextLoggerTreeView.cpp  StaticObjs.cpp
core/src/ui/Widgets/: DateTimeWidget.cpp  NativeConsoleView.cpp  QAbstractLogWidget.cpp  QConsoleWidget.cpp  QContextLoggerTreeWidget.cpp
core/ui/: QAbstractLogView.ui  QAbstractLogWidget.ui  QContextLoggerTreeView.ui
enc_temp_folder/137811f8dafac95c943727737b2fea9f/: QContextLoggerTreeView.cpp
enc_temp_folder/a67d2a9747ed5bcd8e9b91b2b1eb45b/: NativeConsoleView.cpp
unitTests/ExampleTest/: main.cpp  test.cpp
